--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -81,7 +81,7 @@ theme:
   palette:
     scheme: slate
     primary: purple
-  #custom_dir: overrides/
+  custom_dir: overrides/
   icon:
     repo: fontawesome/brands/github
     admonition:
